vlib/v/checker/tests/orm_right_side_field_ref_in_where_error.vv
import db.sqlite

struct User {
	id  int @[primary; sql: serial]
	age int
}

fn main() {
	mut db := sqlite.connect(':memory:') or { panic(err) }

	sql db {
		create table User
	}!

	users := sql db {
		select from User where id == age
	}!

	println(users)
}
